# vertex-ai-proxy

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
src/: main.rs
