[package]
name = "vertex-ai-proxy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
crossterm = "0.28"
ratatui = "0.29"
tokio-stream = "0.1"
bytes = "1"
async-stream = "0.3"
